getting data about moving trains based on schedule

--- a/styles/live-train-style.css
+++ b/styles/live-train-style.css
@@ -1,7 +1,7 @@
-#mini-train-canvas{
+.mini-train-canvas{
     margin: auto;
     width: 40vw;
-    background-color: rgb(255, 213, 213);
+    background-color: rgb(233, 233, 233);
 }
 
 .mini-train-div{
