--- a/styles/live-train-style.css
+++ b/styles/live-train-style.css
@@ -1,7 +1,8 @@
-.mini-train-canvas{
+#mini-train-canvas{
     margin: auto;
     width: 40vw;
     background-color: rgb(233, 233, 233);
+    height: 10px;
 }
 
 .mini-train-div{
@@ -9,6 +10,7 @@
     display: flex;
     width: 4vw;
     flex-direction: column;
+    height: 0px;
 }
 
 .mini-train{
