--- a/styles/content-style.css
+++ b/styles/content-style.css
@@ -7,6 +7,6 @@
     background-color: rgb(95, 170, 255);
     width: 100%;
     min-height: 50px;
-    padding-bottom: 20px;
+    padding: 20px 0;
 }
 
