--- a/styles/navbar-style.css
+++ b/styles/navbar-style.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 90vw;
+    width: 100vw;
+    margin-top: 20px;
 }
 
 .nav-btn{
